# iso8583

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  iso8583.rtf  iso8583_mini.yml  tng.blob  tng.rtf  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  docs.yml
cmake/: iso8583Config.cmake.in
data/iso4217/: README.md
docs/: Doxyfile  README.md  agents.md  build_docs.bat  changelog.md  conf.py  index.rst  quickstart.md  requirements.txt
docs/api/: codec.rst  interfaces.rst  isolog.rst  isomessage.rst  isoparser.rst  isospec.rst
docs/internals/: encoding.md  yaml_format.md
examples/: encoding_example.yml
include/iso8583/: AGENTS.md  Currency.hh  ISOLog.hh  ISOMessage.hh  ISOParser.hh  ISOSpec.hh  ISOUtils.hh  POSDataCode.hh  _codec.hh  config.h  iso8583.h
include/iso8583/detail/: _codec_impl.hh  _components.hh  _currency_table.hh  _interfaces.hh
schemes/: base.yml  piv.yml
scripts/: generate_currency_table.py
src/: _codec.cc  _components.cc  _date.hh  _iconv_wrapper.cc  _iconv_wrapper.hh  _logger.cc  _logger.hh  _padder.cc  _padder.hh  _parser.cc  _parser.hh  _pos.cc  _pos.hh  _preprocessor.cc  _preprocessor.hh  _sourcemap.cc  _sourcemap.hh  _spec.cc  _spec.hh  _tlv.cc  _tlv.hh  _tlv_policy.hh  _utils.cc  _utils.hh  config.cc  fmt_types.hh
tests/: CMakeLists.txt  test_base1_header.cc  test_codec.cc  test_currency.cc  test_dump_operator.cc  test_e2e_full_message.cc  test_field_parser.cc  test_full_unparse.cc  test_iso_message.cc  test_iso_utils.cc  test_logging.cc  test_pos_data_code.cc  test_preprocessor.cc  test_remaining_field.cc  test_spec_loader.cc  test_tlv_parser.cc  test_utils_protect.cc  test_wlp_fo_header.cc
vcpkg-port/: portfile.cmake  usage  vcpkg.json
